# loglib

./: CMakeLists.txt  README.md  conanfile.py  logger.hpp  test-log.cpp
include/: logger.hpp
src/: logger.cpp
